# OpenCL-ICD-Loader

./: appveyor.yml  meson.build
loader/linux/: icd_linux.c
